# HaloTracker

./: README.md  pyproject.toml
_server/core/: models.py  urls.py  views.py  webScraper.py
_server/core/migrations/: 0001_initial.py
_server/registration/: models.py  urls.py  views.py
_server/registration/migrations/: 0001_initial.py  0002_alter_userprofile_halousername.py  0002_userprofile_last_scrape_and_more.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: index.html  package-lock.json  package.json
client/src/: Account.jsx  App.css  App.jsx  Loading.jsx  Navbar.jsx  Player.jsx  Profile.jsx  Search.css  Search.jsx  main.jsx  old-App.jsx
